Change from ListView to RecycleView

--- a/MVP/app/src/main/res/layout/activity_service_history.xml
+++ b/MVP/app/src/main/res/layout/activity_service_history.xml
@@ -12,11 +12,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-
+        <!--
         <ListView
             android:id="@+id/lstvwrServiceHistory"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+            -->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclevwrServiceHistory"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            >
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 
