--- a/MVP/app/src/main/res/layout/service_history_item_row.xml
+++ b/MVP/app/src/main/res/layout/service_history_item_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="5dp">
 
 
@@ -72,7 +72,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewServiceDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ServiceDate:"
@@ -84,4 +84,81 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
     </LinearLayout>
+
+    <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewEquipmentNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EquipmentNumber:"
+            android:paddingRight="20dp"/>
+
+        <TextView
+            android:id="@+id/tvEquipmentNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewHourMeter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="HourMeter:"
+            android:paddingRight="20dp"/>
+
+        <TextView
+            android:id="@+id/tvHourMeter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewJobCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="JobCategory:"
+            android:paddingRight="20dp"/>
+
+        <TextView
+            android:id="@+id/tvJobCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Note:"
+            android:paddingRight="20dp"/>
+
+        <TextView
+            android:id="@+id/tvNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
+
 </LinearLayout>
