--- a/MVP/app/src/main/res/layout/activity_service_history_details.xml
+++ b/MVP/app/src/main/res/layout/activity_service_history_details.xml
@@ -2,86 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textViewID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ID:"
-            android:paddingRight="20dp"/>
-
-        <TextView
-            android:id="@+id/tvServiceHistoryId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
-
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-
-        <TextView
-            android:id="@+id/textViewMechanicName"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleViewServiceHistoryDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Mechanic Name:"
-            android:paddingRight="20dp"/>
-
-        <TextView
-            android:id="@+id/tvMechanicName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="match_parent"
+            android:scrollbars="vertical">
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textViewJobNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Job Number:"
-            android:paddingRight="20dp"/>
-
-        <TextView
-            android:id="@+id/tvJobNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ServiceDate:"
-            android:paddingRight="20dp"/>
-
-        <TextView
-            android:id="@+id/tvServiceDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
-
-
 </LinearLayout>
