--- a/MyToolbar/app/src/main/res/layout/activity_main.xml
+++ b/MyToolbar/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.bhuang.myapplication.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
+    <!-- move this to layout/toolbar.xml -->
+    <!--
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_1"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        android:theme="@style/AppTheme.Bill" />
+        -->
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_1"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/toolbar" />
 
     <include layout="@layout/content_main"/>
 
