--- a/MyToolbar/app/src/main/res/menu/menu_main.xml
+++ b/MyToolbar/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.bhuang.myapplication.MainActivity" >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
+        android:icon="@drawable/user"
         app:showAsAction="never" />
     <item android:id="@+id/action_settings2"
         android:title="Menu 2"
