--- a/MyToolbar/app/src/main/res/layout/activity_main.xml
+++ b/MyToolbar/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/myDrawLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bhuang.myapplication.MainActivity">
+    >
 
-    <!-- move this to layout/toolbar.xml -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/toolbar" />
+
+        <FrameLayout
+            android:id="@+id/myFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <!---->
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/myNavView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/menu_nav"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"
+        >
+
+
+    </android.support.design.widget.NavigationView>
+
     <!--
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_1"
@@ -16,11 +46,8 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         android:theme="@style/AppTheme.Bill" />
-        -->
+     -->
 
-    <include layout="@layout/toolbar" />
-
-    <include layout="@layout/content_main"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -30,4 +57,16 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.DrawerLayout>
+
+
+    <!--
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.bhuang.myapplication.MainActivity">
+
+</android.support.design.widget.CoordinatorLayout>-->
